# nvim-config

./: init.lua  lazy-lock.json
after/plugin/: colors.lua
lua/hugo/: colors.lua  init.lua  remap.lua  set.lua
lua/plugins/: autocomplete.lua  autoformat.lua  code_navigation.lua  completion.lua  editing.lua  formatting.lua  git.lua  jukit.lua  lazy.lua  lint.lua  linting.lua  lsp.lua  misc.lua  molten.lua  navigation.lua  notebook_management.lua  notebook_managenement.lua  notebooks.lua  packer.lua  pluginlist.lua  project_navigation.lua  statusbar.lua  telescope.lua  test.lua  treesitter.lua  which-key.lua
python_template/: .theme  config.toml  logging_config.toml  main.py  pyproject.toml
