[tool.poetry]
name = "prediction-commandes"
version = "0.1.0"
description = ""
authors = ["hugo lepeytre <hugo.lepeytre@cegedim-srh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
xgboost = "^2.0.3"
scikit-learn = "^1.3.2"
psycopg = "^3.1.17"
seaborn = "^0.13.1"
types-seaborn = "^0.13.1.20240115"
statsmodels = "^0.14.1"
tsfeatures = "^0.4.5"
pyarrow = "^15.0.0"
statsforecast = "^1.7.1"
utilsforecast = "^0.0.26"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
mypy = "^1.7.1"
jupytext = "^1.16.0"
jupyterlab = "^4.0.9"
ipykernel = "^6.27.1"
pandas-stubs = "^2.1.4.231218"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "D", "F", "W", "I", "PD", "PL", "NPY", "RUF", "S", "B", "A", "C4", "DTZ", "DJ", "ISC", "PIE", "RET", "SIM", "ARG", "PTH"]
fixable = ["I"]
unfixable = []

[tool.ruff.format]
quote-style = "single"

[tool.sqlfluff.core]
dialect = "postgres"

[tool.sqlfluff.indentation]
indent_unit = "space"
tab_space_size = 2
